# Jpeg_to_bmp_converter

./: CMakeLists.txt  README.md  Y_vis.cpp  dct.cpp  zigzap.cpp
include/: huffman_decoder.h  inverse_dct.h  inverse_quantize.h  inverse_zigzag.h  jpeg_decoder.h  jpeg_header_parser.h  jpeg_parser_helpers.h  save_as_bmp.h  save_as_gray.h
src/: huffman_decoder.cpp  inverse_dct.cpp  inverse_quantize.cpp  inverse_zigzag.cpp  jpeg_decoder.cpp  jpeg_decompress.py  jpeg_header_helpers.cpp  jpeg_header_parser.cpp  main.cpp  save_as_bmp.cpp  save_as_gray.cpp
